First draft of a property-based plugin base class.